src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Owner_Division__c</fullName>
        <formula>Text(Owner.User_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Owner Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner_User_Department__c</fullName>
        <formula>Text(Owner.User_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Owner User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <description>If Type = Other, what is the description?</description>
        <inlineHelpText>Describe the reason for selecting &quot;Other&quot; as the type.</inlineHelpText>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>What location/region is the campaign for?</description>
        <inlineHelpText>What location/region is the campaign for?</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Mid-States</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Case that is related to the campaign</inlineHelpText>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vertical_Market__c</fullName>
        <description>What vertical market is the campaign specifically targeting?</description>
        <inlineHelpText>What vertical market is the campaign specifically targeting?</inlineHelpText>
        <label>Vertical Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After Market (ESCO)</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Education (K-12)</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Public Agencies</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Latin_America_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Campaign_Owner_User_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Owner_Division__c</field>
            <operation>equals</operation>
            <value>Latin America</value>
        </filters>
        <label>Latin America Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Campaigns</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Latin_America</fullName>
        <active>false</active>
        <label>Latin America</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Campaign_Record_Type</fullName>
        <active>true</active>
        <description>Legals Campaigns - These can be confidentail</description>
        <label>Legal Campaign Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>North_America</fullName>
        <active>true</active>
        <label>North America</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Other_Type</fullName>
        <active>true</active>
        <description>If Other is selected for the Type then the Other Description field must be populated</description>
        <errorConditionFormula>AND(ISPICKVAL(Type, &apos;Other&apos;), ISBLANK( Other_Description__c ))</errorConditionFormula>
        <errorDisplayField>Other_Description__c</errorDisplayField>
        <errorMessage>Type = Other requires an Other Description</errorMessage>
    </validationRules>
</CustomObject>